Implement genarate playlist audio with js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="#">
   </head>
 
   <body>
@@ -39,109 +40,9 @@
           </select>
         </div>
       <div id="playlist" class="p-t-20">
-        <div class="audio playing">
-          <img src="/img/music.png" alt="music">
-          <div class="audio-description">
-            <div class="description">
-              <h3 class="playing">Playlist 1</h3>
-              <p>Playlist . Tung 1</p>
-            </div>
-             <i class="fal fa-volume"></i>
-          </div>
-        </div>
-        <div class="audio playing">
-          <img src="/img/music.png" alt="music">
-          <div class="audio-description">
-            <div class="description">
-              <h3 class="playing">Playlist 2</h3>
-              <p>Playlist . Tung 2</p>
-            </div>
-             <i class="fal fa-volume"></i>
-          </div>
-        </div>
-        <div class="audio playing">
-          <img src="/img/music.png" alt="music">
-          <div class="audio-description">
-            <div class="description">
-              <h3 class="playing">Playlist 3</h3>
-              <p>Playlist . Tung 3</p>
-            </div>
-             <i class="fal fa-volume"></i>
-          </div>
-        </div>
-        <div class="audio playing">
-          <img src="/img/music.png" alt="music">
-          <div class="audio-description">
-            <div class="description">
-              <h3 class="playing">Playlist 4</h3>
-              <p>Playlist . Tung 4</p>
-            </div>
-             <i class="fal fa-volume"></i>
-          </div>
-        </div>
-        <div class="audio playing">
-          <img src="/img/music.png" alt="music">
-          <div class="audio-description">
-            <div class="description">
-              <h3 class="playing">Playlist 5</h3>
-              <p>Playlist . Tung 5</p>
-            </div>
-             <i class="fal fa-volume"></i>
-          </div>
-        </div>
-        <div class="audio playing">
-          <img src="/img/music.png" alt="music">
-          <div class="audio-description">
-            <div class="description">
-              <h3 class="playing">Playlist 6</h3>
-              <p>Playlist . Tung 6</p>
-            </div>
-             <i class="fal fa-volume"></i>
-          </div>
-        </div>
-        <div class="audio playing">
-          <img src="/img/music.png" alt="music">
-          <div class="audio-description">
-            <div class="description">
-              <h3 class="playing">Playlist 7</h3>
-              <p>Playlist . Tung 7</p>
-            </div>
-             <i class="fal fa-volume"></i>
-          </div>
-        </div>
-        <div class="audio playing">
-          <img src="/img/music.png" alt="music">
-          <div class="audio-description">
-            <div class="description">
-              <h3 class="playing">Playlist 8</h3>
-              <p>Playlist . Tung 8</p>
-            </div>
-             <i class="fal fa-volume"></i>
-          </div>
-        </div>
-        <div class="audio playing">
-          <img src="/img/music.png" alt="music">
-          <div class="audio-description">
-            <div class="description">
-              <h3 class="playing">Playlist 10</h3>
-              <p>Playlist . Tung 10</p>
-            </div>
-             <i class="fal fa-volume"></i>
-          </div>
-        </div>
-        <div class="audio playing">
-          <img src="/img/music.png" alt="music">
-          <div class="audio-description">
-            <div class="description">
-              <h3 class="playing">Playlist 11</h3>
-              <p>Playlist . Tung 11</p>
-            </div>
-             <i class="fal fa-volume"></i>
-          </div>
-        </div>
       </div>
     </section>
-    <section class="grid-item" id="aa">
+    <section class="grid-item">
       <div id="header-middle" class="section-md" style="border-radius: 15px 15px 0 0;">
         <div id="head-middle">
           <div id="head-middle-left">
@@ -190,100 +91,44 @@
                 <td><i class="fal fa-clock"></i></td>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>
-                  <div class="audio">
-                    <img src="/img/music.png" alt="music">
-                    <div class="description">
-                      <h3 class="playing">Playlist 11</h3>
-                      <p>Playlist . Tung 11</p>
-                    </div>
-                  </div>
-                </td>
-                <td>Playlist 1</td>
-                <td>3:45</td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>
-                  <div class="audio">
-                    <img src="/img/music.png" alt="music">
-                    <div class="description">
-                      <h3 class="playing">Playlist 11</h3>
-                      <p>Playlist . Tung 11</p>
-                    </div>
-                  </div>
-                </td>
-                <td>Playlist 1</td>
-                <td>3:45</td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>
-                  <div class="audio">
-                    <img src="/img/music.png" alt="music">
-                    <div class="description">
-                      <h3 class="playing">Playlist 11</h3>
-                      <p>Playlist . Tung 11</p>
-                    </div>
-                  </div>
-                </td>
-                <td>Playlist 1</td>
-                <td>3:45</td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>
-                  <div class="audio">
-                    <img src="/img/music.png" alt="music">
-                    <div class="description">
-                      <h3 class="playing">Playlist 11</h3>
-                      <p>Playlist . Tung 11</p>
-                    </div>
-                  </div>
-                </td>
-                <td>Playlist 1</td>
-                <td>3:45</td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>
-                  <div class="audio">
-                    <img src="/img/music.png" alt="music">
-                    <div class="description">
-                      <h3 class="playing">Playlist 11</h3>
-                      <p>Playlist . Tung 11</p>
-                    </div>
-                  </div>
-                </td>
-                <td>Playlist 1</td>
-                <td>3:45</td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>
-                  <div class="audio">
-                    <img src="/img/music.png" alt="music">
-                    <div class="description">
-                      <h3 class="playing">Playlist 11</h3>
-                      <p>Playlist . Tung 11</p>
-                    </div>
-                  </div>
-                </td>
-                <td>Playlist 1</td>
-                <td>3:45</td>
-              </tr>
+            <tbody id="playlist-middle-body">
             </tbody>
           </table>
         </div>
       </div>
     </section>
-    <section class="grid-item">
+    <section class="grid-item section-md component-radius">
+      <div id="head-right">
+        <h3 class="p-b-20">Playlist</h3>
+        <img src="/img/music.png" alt="music">
+        <div id="head-right-description">
+          <div>
+            <h3 class="p-b-20">Playlist 1</h3>
+            <h3 class="p-b-20">Playlist 1 . Tung 1</h3>
+          </div>
+          <div>
+            <i class="fas fa-heart p-r-20"></i>
+            <i class="fas fa-ellipsis-h"></i>
+          </div>
+        </div>
+      </div>
+      <div id="body-right" class="section-md component-radius">
+        <div>
+          <p><strong>Next in queue</strong></p>
+          <p>Open queue</p>
+        </div>
+        <div>
+          <i class="fal fa-music"></i>
+          <img src="/img/music.png" alt="">
+          <div>
+            <h3 class="playing">Playlist 11</h3>
+            <p>Playlist . Tung 11</p>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
-
   <script type="module" src="/src/script.js"></script>
+  <script src="http://code.jquery.com/jquery-3.7.0.min.js"></script>
   </body>
 </html>
